--- a/index.html
+++ b/index.html
@@ -1,12 +1,283 @@
+
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/styles.min.css">
-  <title>Ex-jeuxvideo</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>TheGazette - News Magazine HTML5 Template | Home</title>
+    <link rel="stylesheet" href="./styles/styles.min.css">
 </head>
+
 <body>
-  
+    <!-- Header  -->
+    <header class="header">
+        <div class="header-section1">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="logo">
+                            <a href="index.html"><img src="img/core-img/logo.png" alt="logo"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="header-section2">
+            <div class="navbar">
+                <div class="nav">
+                            <a class="nav-link" href="">Today <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="">Politics</a>
+                            <a class="nav-link" href="">Lifestyle</a>
+                            <a class="nav-link" href="">Travel</a>
+                            <a class="nav-link" href="">Health</a>
+                            <a class="nav-link" href="">Entertainment</a>
+                            <a class="nav-link" href="">About us</a>
+                            <a class="nav-link" href="">Contact</a>
+                    <div class="nav-search-">
+                    </div>
+                    <div class="navbouton">
+                        <div></div>
+                        <div></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- Header  -->
+
+    <!-- bannier -->
+    <section class="container-fluid">
+        <div class="block">
+            <img src="" alt="">
+            <div class="text">
+                <div class="tag">
+                    <a href="">live</a>
+                </div>
+                <h3><a href="">The latest news live</a></h3>
+                <div class="date">
+                    <p href="">March 29, 2018</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- bannier -->
+    <!-- info -->
+    <section class="wapper">
+        <div class="container">
+            <div class="row">
+                <div class="col-9">
+                    <!-- politice -->
+                    <div class="politice">
+                        <div class="tag">
+                            <a href="#">Politices</a>
+                        </div>
+                        <h2>What's behind the world obsession with gems?</h2>
+                        <p class="date">March 29, 2016</p>
+                        <div class="blog-post-thumbnail my-5">
+                            <img src="img/blog-img/1.jpg" alt="post-thumb">
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices egestas nunc, quis venenatis orci tincidunt id. Fusce commodo blandit eleifend. Nullam viverra tincidunt dolor, at pulvinar dui. Nullam at risus ut ipsum viverra posuere. Aliquam quis convallis enim. Nunc pulvinar molestie sem id blandit. Nunc venenatis interdum mollis. Aliquam finibus nulla quam, a iaculis justo finibus non. Suspendisse in fermentum nunc. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices egestas nunc, quis venenatis orci tincidunt id. Fusce commodo blandit eleifend.</p>
+                        <div class="post-continue-reading-share d-sm-flex align-items-center justify-content-between mt-30">
+                            <div class="post-continue-btn">
+                                <a href="" class="btn-continue">Continue Reading</a>
+                            </div>
+                            <div class="resaeu">
+                                <a href=""></a>
+                                <a href=""></a>
+                                <a href=""></a>
+                                <a href=""></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="toadays">
+                        <div class="todays-title">
+                            <h4>today’s most popular</h4>
+                        </div>
+                        <!-- news -->
+                        <div class="block-todays">
+                            <div class="toadays-img">
+                                <img src="img/blog-img/2.jpg" alt="">
+                            </div>
+                            <div class="todays-content">
+                                <div>
+                                    <a class="tag" href="#">News</a>
+                                </div>
+                                <h3><a href="">$250-million mansion is most expensive</a></h3>
+                                <span class="date">March 29, 2016</span>
+                                <a href="#" class="post-total-comments">3 Comments</a>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices egestas nunc, quis venenatis orci tincidunt id. Fusce commodo blandit eleifend. Nullam viverra tincidunt dolor, at pulvinar dui. Nullam at risus ut ipsum viverra posuere.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12">
+                    <div class="wapper-breaking">
+                        <!-- Breaking -->
+                        <div class="breaking">
+                            <div class="border-bottom">
+                                <h5>breaking news</h5>
+                            </div>
+                            <!-- Single -->
+                            <div class="single">
+                                <img src="img/blog-img/bn-1.jpg" alt="">
+                                <div class="breaking-title">
+                                    <p class="tag">breaking news</p>
+                                </div>
+                                <div class="breaking-text">
+                                    <h5>China leads new global skyscraper record</h5>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Don't Miss -->
+                        <div class="dont">
+                            <div>
+                                <h5>Don't miss</h5>
+                            </div>
+                            <!-- Single Don't Miss Post -->
+                            <div class="single">
+                                <div>
+                                    <img src="img/blog-img/dm-1.jpg" alt="">
+                                </div>
+                                <div>
+                                    <a href="#">EU council reunites</a>
+                                    <span class="date">Nov 29, 2017</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Subscribe -->
+                        <div class="subscribe">
+                            <div class="subscribe-widget">
+                                <h5>subscribe</h5>
+                            </div>
+                            <div class="subscribe-form">
+                                <form action="">
+                                    <input type="email" name="email" placeholder="Your Email">
+                                    <button>subscribe</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- info -->
+
+        <!--categorie -->
+        <div class="wapper">
+            <div class="container-grid">
+                <div class="row">
+                    <div class="col-12">
+                        <!-- Single Catagorie -->
+                        <div class="Catagorie">
+                            <div class="single-catagory-post-thumb mb-15">
+                                <img src="img/blog-img/12.jpg" alt="">
+                            </div>
+                            <!-- Post Tag -->
+                            <div>
+                                <a href="" class="tag">Video</a>
+                            </div>
+                            <h5><a href="">Save the eniroment with this step</a></h5>
+                            <span>Nov 29, 2017</span>
+                        </div>
+                        <!-- post -->
+                        <div class="categorie-post">
+                            <h5><a href="">Protest to be anounced in January</a></h5>
+                            <span>Nov 29, 2017</span>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-12">
+                                <!-- Single Catagory Post -->
+                                <div class="categorie">
+                                    <div>
+                                        <img src="img/blog-img/14.jpg" alt="">
+                                    </div>
+                                    <!-- Post Tag -->
+                                    <div class="tag">
+                                        <a href="">Others</a>
+                                    </div>
+                                    <h5><a href="">11 hottest toys for this holiday season</a></h5>
+                                    <span class="date">Nov 29, 2017</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- categorie -->
+
+    <!-- Video -->
+    <section class="video">
+        <div class="container">
+            <div class="row">
+                <!-- Single video -->
+                <div class="col-12">
+                    <div class="single-video">
+                        <div class="video-post-thumb">
+                            <img src="img/blog-img/4.jpg" alt="">
+                            <a href="https://youtu.be/dIyXl9ZHEgg" class="videobtn"></a>
+                        </div>
+                        <h5><a href="#">Show suspended by PBS amid misconduct allegations</a></h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Video -->
+
+    <!-- Footer  -->
+    <footer class="footer">
+        <!-- Top Footer -->
+        <div class="footer-top">
+            <div class="container">
+                <div class="row">
+                    <!-- Single Footer -->
+                    <div class="col-12">
+                        <div class="footer-single">
+                            <div class="footer-title">
+                                <h4>Regions</h4>
+                            </div>
+                            <ul class="footer-menu">
+                                <li><a href="">U.S.</a></li>
+                                <li><a href="">Africa</a></li>
+                                <li><a href="">Americas</a></li>
+                                <li><a href="">Asia</a></li>
+                                <li><a href="">China</a></li>
+                                <li><a href="">Europe</a></li>
+                                <li><a href="">Middle</a></li>
+                                <li><a href="">East</a></li>
+                                <li><a href="">Opinion</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Bottom Footer -->
+        <div class="footer-bottom">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="text">
+                            <p>
+                            Copyright 2025 All rights reserved | This template is made with by colorib
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer -->
+
 </body>
+
 </html>
