--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="">
@@ -17,7 +17,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="logo">
-                            <a href="index.html"><img src="img/core-img/logo.png" alt="logo"></a>
+                            <a href="index.html"><img src="./img/logo.png" alt="logo"></a>
                         </div>
                     </div>
                 </div>
@@ -26,19 +26,25 @@
         <div class="header-section2">
             <div class="navbar">
                 <div class="nav">
-                            <a class="nav-link" href="">Today <span class="sr-only">(current)</span></a>
-                            <a class="nav-link" href="">Politics</a>
-                            <a class="nav-link" href="">Lifestyle</a>
-                            <a class="nav-link" href="">Travel</a>
-                            <a class="nav-link" href="">Health</a>
-                            <a class="nav-link" href="">Entertainment</a>
-                            <a class="nav-link" href="">About us</a>
-                            <a class="nav-link" href="">Contact</a>
-                    <div class="nav-search-">
-                    </div>
-                    <div class="navbouton">
-                        <div></div>
-                        <div></div>
+                    <a class="nav-link" href="">Today <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="">Politics</a>
+                    <a class="nav-link" href="">Lifestyle</a>
+                    <a class="nav-link" href="">Travel</a>
+                    <a class="nav-link" href="">Health</a>
+                    <a class="nav-link" href="">Entertainment</a>
+                    <a class="nav-link" href="">About us</a>
+                    <a class="nav-link" href="">Contact</a>
+                </div>
+                <div class="nav-search">
+                </div>
+                <div class="navbouton">
+                    <div class="nav-bouton">
+                        <div class="nav-img">
+                            <img src="https://img.icons8.com/ios-filled/50/menu--v6.png" alt="menu--v6"/>
+                        </div>
+                        <div class="nav-menu-burger">
+                            <p>Menu</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -47,14 +53,38 @@
     <!-- Header  -->
 
     <!-- bannier -->
-    <section class="container-fluid">
-        <div class="block">
-            <img src="" alt="">
-            <div class="text">
+    <section class="container-fluid container-grid">
+        <div class="block col12">
+            <img class="img" src="./img/19.jpg" alt="">
+            <div class="text absolute">
                 <div class="tag">
-                    <a href="">live</a>
+                    <a href="" class="blanc">live</a>
                 </div>
-                <h3><a href="">The latest news live</a></h3>
+                <h3><a href="" class="blanc">The latest news live</a></h3>
+                <div class="date">
+                    <p href="">March 29, 2018</p>
+                </div>
+            </div>
+        </div>
+        <div class="block col12">
+            <img class="img" src="./img/19.jpg" alt="">
+            <div class="text absolute">
+                <div class="tag">
+                    <a href="" class="blanc">live</a>
+                </div>
+                <h3><a href="" class="blanc">The latest news live</a></h3>
+                <div class="date">
+                    <p href="">March 29, 2018</p>
+                </div>
+            </div>
+        </div>
+        <div class="block col12">
+            <img class="img" src="./img/19.jpg" alt="">
+            <div class="text absolute">
+                <div class="tag">
+                    <a href="" class="blanc">live</a>
+                </div>
+                <h3><a href="" class="blanc">The latest news live</a></h3>
                 <div class="date">
                     <p href="">March 29, 2018</p>
                 </div>
@@ -66,7 +96,7 @@
     <section class="wapper">
         <div class="container">
             <div class="row">
-                <div class="col-9">
+                <div class="col12">
                     <!-- politice -->
                     <div class="politice">
                         <div class="tag">
@@ -75,12 +105,13 @@
                         <h2>What's behind the world obsession with gems?</h2>
                         <p class="date">March 29, 2016</p>
                         <div class="blog-post-thumbnail my-5">
-                            <img src="img/blog-img/1.jpg" alt="post-thumb">
+                            <img src="./img/1.jpg" alt="post-thumb">
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices egestas nunc, quis venenatis orci tincidunt id. Fusce commodo blandit eleifend. Nullam viverra tincidunt dolor, at pulvinar dui. Nullam at risus ut ipsum viverra posuere. Aliquam quis convallis enim. Nunc pulvinar molestie sem id blandit. Nunc venenatis interdum mollis. Aliquam finibus nulla quam, a iaculis justo finibus non. Suspendisse in fermentum nunc. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices egestas nunc, quis venenatis orci tincidunt id. Fusce commodo blandit eleifend.</p>
-                        <div class="post-continue-reading-share d-sm-flex align-items-center justify-content-between mt-30">
+                        <p class="politicelorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices egestas nunc, quis venenatis orci tincidunt id. Fusce commodo blandit eleifend. Nullam viverra tincidunt dolor, at pulvinar dui. Nullam at risus ut ipsum viverra posuere. Aliquam quis convallis enim. Nunc pulvinar molestie sem id blandit. Nunc venenatis interdum mollis. Aliquam finibus nulla quam, a iaculis justo finibus non. Suspendisse in fermentum nunc. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices egestas nunc, quis venenatis orci tincidunt id. Fusce commodo blandit eleifend.</p>
+                        <div class="politice-lien">
                             <div class="post-continue-btn">
                                 <a href="" class="btn-continue">Continue Reading</a>
+                                <img src="https://img.icons8.com/ios/50/forward--v1.png" alt="forward--v1"/>
                             </div>
                             <div class="resaeu">
                                 <a href=""></a>
@@ -113,7 +144,7 @@
                     </div>
                 </div>
 
-                <div class="col-12">
+                <div class="col12">
                     <div class="wapper-breaking">
                         <!-- Breaking -->
                         <div class="breaking">
